--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="upper-right-pic">
-        <img src="/images/1`.png" alt="" />
+        <img src="./images/1`.png" alt="" />
       </div>
     </section>
 
@@ -49,7 +49,7 @@
       </div>
 
       <div class="upper-right-pic">
-        <img src="/images/2.png" alt="" />
+        <img src="./images/2.png" alt="" />
       </div>
     </section>
     <section>
