--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </section>
     <footer>
-      <p class="footer">&copy; 2023 | Redowan Ahmed</p>
+      <p class="footer">Copyright &copy; 2023. Redowan Ahmed</p>
     </footer>
   </body>
 </html>
